Added Swagger docs, strict DTO validation, and fixed SonarQube docker startup profile